include $(top_srcdir)/build/top.mk
## $Header$
## Process this file with automake to produce Makefile.in
## Do not forget to run automake ( --add-missing ) when you modify Makefile.am

EXTRA_DIST = \
arpack.h \
f2c-int.h \
f2c.h \
getopt.h \
jdqz.h \
lapack.h \
mpi.h \
pthread.h \
spinlock.h \
sys_sysinfo.h \
unistd.h

include $(top_srcdir)/build/bot.mk
